# ur_control_from_terminal

./: README.md  frames_2025-03-04_11.12.54.gv  frames_2025-03-04_11.13.34.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/move_relative_ur/lib/move_relative_ur/: move_relative_node  robot_monitoring_node
install/move_relative_ur/share/move_relative_ur/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/move_relative_ur/share/move_relative_ur/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_move_relative_ur__rosidl_generator_cExport-noconfig.cmake  export_move_relative_ur__rosidl_generator_cExport.cmake  export_move_relative_ur__rosidl_generator_cppExport.cmake  export_move_relative_ur__rosidl_generator_pyExport.cmake  export_move_relative_ur__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  move_relative_urConfig-version.cmake  move_relative_urConfig.cmake  move_relative_ur__rosidl_typesupport_introspection_cppExport-noconfig.cmake  move_relative_ur__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/move_relative_ur/share/move_relative_ur/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/move_relative_ur/share/move_relative_ur/msg/: ErrorMsg.idl  ErrorMsg.json  ErrorMsg.msg
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/robot_move/share/robot_move/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/log/: latest_build
src/move_relative_ur/: CMakeLists.txt
src/move_relative_ur/src/: move_monitoring_node.cpp  move_relative.cpp
(+54 files in other folders)
